Add bundled Rust crate

--- a/dist.ini
+++ b/dist.ini
@@ -17,8 +17,10 @@ workflow       = linux
 version_plugin = PkgVersion::Block
 irc            = irc://irc.perl.org/#native
 
+[FFI::Build]
+[Prereqs / ConfigureRequires]
+FFI::Build::File::Cargo = 0
 [Author::Plicease::Core]
-
 [Author::Plicease::Upload]
 cpan = 0
 
